Changelog for Hearthstone (v1.4.1-SNAPSHOT)

2013-05-30 18:13:52 +0100    use ticks instead of milliseconds with the scheduler (James Richardson)
2013-05-30 18:12:06 +0100    set static variables on ScheduledTeleport (James Richardson)
2013-05-30 18:10:48 +0100    remove prefix from old keys (James Richardson)
2013-05-30 18:08:00 +0100    set command now breaks correctly and scheduled teleport schedules itself (James Richardson)
2013-05-30 18:03:38 +0100    prevent players setting homes at spawn (James Richardson)
2013-05-30 17:59:00 +0100    add permission defaults (James Richardson)
2013-05-30 17:55:50 +0100    finish updating (James Richardson)
2013-05-30 05:08:53 +0100    remove debugging output (James Richardson)
2013-05-30 05:08:33 +0100    refactoring and update to use latest bukkit utilities (James Richardson)
2013-05-30 04:12:18 +0100    update pom fix relocation of utilities into another plugins name space (James Richardson)
2013-05-19 21:23:11 +0100    added scheduled teleporting with sound and effects additionally added warmup sounds. (James Richardson)
2013-05-19 21:23:11 +0100    added casting animation and sound when teleporting (James Richardson)
2013-05-19 21:23:11 +0100    update teleport command to tab complete offline players (James Richardson)
2013-03-24 18:33:38 +0000    remove stray debugging messages (James Richardson)
2013-03-24 18:29:19 +0000    missing colour code (James Richardson)
2013-03-24 18:26:48 +0000    implement tab completion (James Richardson)
2013-02-10 18:09:00 +0000    update README (James Richardson)

v1.3.1
2013-02-10 18:00:54 +0000    another fix to debug message (James Richardson)
2013-02-10 17:56:07 +0000    fix missing debug message (James Richardson)
2013-02-10 17:49:48 +0000    add colours to messages (James Richardson)
2013-02-10 17:45:42 +0000    register cooldown permission (James Richardson)
2013-02-10 17:42:28 +0000    allow access to commands by default (James Richardson)