@@ -33,7 +33,7 @@
      <dependency>
            <groupId>name.richardson.james.bukkit</groupId>
            <artifactId>bukkit-utilities</artifactId>
-           <version>5.0.1-SNAPSHOT</version>
+           <version>5.0.2</version>
      </dependency>
      <dependency>
            <groupId>com.sk89q</groupId>
